--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NIST CSF Metaphors and Translations</title>
+    <title>CIS Metaphors and Translations</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self'; font-src 'self';">
     <style>
         html, body {
@@ -116,8 +116,8 @@
     </style>
 <body>
     <div class="container">
-        <h1>NIST CSF Metaphor Search</h1>
-        <input type="text" id="searchInput" placeholder="Enter control (e.g., GV.OC-01)">
+        <h1>CIS Metaphor Search</h1>
+        <input type="text" id="searchInput" placeholder="Enter control (e.g., 8.1)">
         <button id="searchButton">Find Metaphor</button>
         <button id="allControlsButton">Show All Controls</button>
         <div id="result"></div>
