--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div id="result"></div>
         <div class="soup-of-the-day">
             <h2>Soup of the Day</h2>
-            <p id="soupAcronym"></p>
+            <p id="soupControl"></p>
         </div>
     </div>
     <script src="script.js"></script>
