--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <button id="searchButton">Find Metaphor</button>
         <button id="allControlsButton">Show All Controls</button>
         <div id="result"></div>
-        <div class="soup-of-the-day">
+        <div class="soup-of-the-day" id="soupOfTheDay">
             <h2>Soup of the Day</h2>
             <p id="soupControl"></p>
         </div>
